[tool.poetry]
name = "gerrydb-meta"
version = "0.2.0"
description = ""
authors = ["Parker J. Rule <parker.rule@tufts.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = {extras = ["postgres"], version = "^2.0.4"}
pydantic = "^1.9.2"
GeoAlchemy2 = "^0.13.1"
psycopg2-binary = "^2.9.3"
click = "^8.1.3"
PyYAML = "^6.0"
us = "^2.0.2"
utm = "^0.7.0"
fastapi = "^0.115.12"
uvicorn = "^0.20.0"
httpx = "^0.28.1"
ormsgpack = "^1.2.5"
gunicorn = "^20.1.0"
shapely = "^2.0.1"
orjson = "^3.8.10"
google-cloud-storage = "^2.8.0"
google-auth = "^2.17.3"
networkx = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
black = "^25.1.0"
isort = "^5.10.1"
alembic = "^1.9.2"
networkx = "^3.3.0"
geopandas = "^0.14.4"
fiona = ">=1.9,<1.10"
pytest-cov = "^6.1.0"
pytest-asyncio = "^0.26.0"
pytest-httpx = "^0.35.0"
sqltap = "^0.3.11"
msgpack = "^1.1.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


